--- a/login.html
+++ b/login.html
@@ -10,11 +10,11 @@
     <form id="login" >    
         <label><b>User Name  </b>    
         </label>    
-        <input type="text" name="Uname1" id="Uname" placeholder="Username" >    
+        <input type="text" name="Uname1" id="Uname12" placeholder="Username" >    
         <br><br>    
         <label><b>Password</b>    
         </label>    
-        <input type="Password" name="Pass1" id="Pass" placeholder="Password">    
+        <input type="Password" name="Pass1" id="Pass12" placeholder="Password">    
         <br><br>    
         <button type="button" style="margin-left: 170px; background-color: orange;"> Login  </button>     
         <br><br>    
